# pytest-sort

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  code-coverage.json  mutation-testing-report.json  mutation-testing-report.xml  mutmut.ipynb  mutmut_config.py  pyproject.toml  tools.ipynb
.github/worflows/: test.yml
.github/workflows/: python-mutation-test.yml  python-publish.yml  python-test-matrix.yml  python-test-scan.yml  test.yml  update-coverage.yml
docs/: requirements.txt  tools.ipynb
docs/examples/class_var/: service.py  test_service.py  test_service_best.py  test_service_better.py  test_service_good.py
docs/examples/module_var/: app.py  test_app.py  test_app_best.py  test_app_better.py  test_app_good.py
docs/examples/test_var/: core.py  service.py  test_core.py  test_core_fix.py
docs/source/: app_state_leaks.md  conf.py  configuration.md  configuration.rst  example_class.md  example_env.md  example_test.md  how.rst  index.md  index.rst  markers.rst  mutation_testing.md  options.rst  problem.md  quickstart.rst  usage.md  usage.rst
req/: build.txt  mypy.txt  poodle.txt  py38.txt  pytest.txt  requirements.txt  tools.txt
src/pytest_sort/: __init__.py  config.py  core.py  database.py  diffcov.py  plugin.py
test/: test_config.py  test_core.py  test_database.py  test_diffcov.py  test_plugin.py
test/fake/: test_base.py
