[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-sort"
description = "Tools for sorting test cases"
version = "1.3.1"
license = { file = "LICENSE" }
keywords = [
    "test",
    "pytest",
    "order",
    "pytest-order",
    "sort",
    "random",
    "pytest-random",
    "pytest-random-order",
    "randomly",
    "pytest-randomly",
]
authors = [{ name = "WiredNerd", email = "pbuschmail-pytestsort@yahoo.com" }]
maintainers = [
    { name = "WiredNerd", email = "pbuschmail-pytestsort@yahoo.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]
dependencies = ["pytest>=7.4.0", "whatthepatch>=1.0.5", "coverage>=7.3.1"]

[project.urls]
"Documentation" = "https://pytest-sort.readthedocs.io/"
"Homepage" = "https://github.com/WiredNerd/pytest-sort"
"Issue Tracker" = "https://github.com/WiredNerd/pytest-sort/issues"

[project.entry-points."pytest11"]
sort = "pytest_sort.plugin"

[tool.pytest.ini_options]
pythonpath = ["src", "src_mut"]
testpaths = ["test"]
addopts = "-vv --cov-reset --cov-report=html:cov-html --cov-report=term"

# https://pytest-cov.readthedocs.io/en/latest/config.html
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true

[tool.coverage.report]
# fail_under = 95
skip_empty = true
exclude_also = ["import .*", "from .* import .*", "if TYPE_CHECKING:"]

[tool.poodle]
reporters = ["summary", "not_found", "json"]

[tool.poodle.runner_opts]
command_line = "pytest -x --assert=plain -o pythonpath='{PYTHONPATH}' --sort-mode=mutcov"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = true
color = true

[tool.isort]
profile = 'black'

[tool.mypy]
files = "src"
mypy_path = "src"

[tool.ruff]
target-version = "py38"
show-source = true
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "COM812", # missing-trailing-comma
    "D203",   # 1 blank line required before class docstring
    "D213",   # multi-line-summary-second-line
    "EM101",  # Exception must not use a string literal, assign to variable first
    "ISC001", # single-line-implicit-string-concatenation
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY003", # Avoid specifying long messages outside the exception class
]
line-length = 120
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.isort]
known-first-party = ["pytest_sort"]

[tool.ruff.per-file-ignores]
"src/pytest_sort/core.py" = [
    "ARG005", # Unused lambda argument
    "T201",   # print found
]
"src/pytest_sort/database.py" = [
    "PLW0603", # global-statement
]
"test/*" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN205",  # Missing return type annotation for staticmethod
    "ANN206",  # Missing return type annotation for classmethod
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in ...
    "ERA001",  # Found commented-out code
    "FBT003",  # Boolean positional value in function call
    "N802",    # Function name should be lowercase
    "N803",    # Argument name should be lowercase
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of `assert` detected
    "SLF001",  # Private member accessed
]
